--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
+# Gradle stuff
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
-/captures
+.idea/
+out/
 *.iml
-.idea
+/captures
