--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.1.2'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.7.4'
-    compile 'com.squareup.okio:okio:1.6.0'
+    // Check version at https://github.com/square/okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.7.5'
+    compile 'com.squareup.okio:okio:1.7.0'
 }
 
 allprojects {
