--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
 buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
